# tiny-detective

./: .dockerignore  .firebaserc  .gitignore  .trivyignore  LICENSE  README.md  SECURITY.md  firebase.json  firestore.rules
services/api/: .env.example  Dockerfile  pyproject.toml
services/api/app/: main.py
services/api/app/api/: dependencies.py  logging_middleware.py  mappers.py  rate_limiting.py
services/api/app/api/routes/: admin.py  cases.py  hints.py  players.py  scores.py
services/api/app/application/: errors.py  ports.py
services/api/app/contracts/: base.py
services/api/app/contracts/requests/: _fields.py  (+2 more)
services/api/app/domain/: errors.py
services/api/app/infrastructure/: seed_data.py
services/api/tests/: conftest.py  fakes.py
services/api/tests/contract/: conftest.py  test_admin_contract.py  test_case_generation_contract.py  test_cases_contract.py  test_hint_contract.py  test_openapi_schema.py  test_players_contract.py  test_solution_contract.py
services/api/tests/fixtures/: hint_guardrail_cases.json
services/api/tests/integration/: conftest.py  test_firestore_attempt_repository.py  test_firestore_case_repository.py  test_firestore_generation_quota_repository.py  test_firestore_hint_request_repository.py  test_firestore_player_repository.py  test_use_cases_with_firestore.py
services/api/tests/unit/: test_case_consistency_policy.py  test_case_visibility.py  test_dependencies_seeding.py  test_generate_case_use_case.py  test_hint_guardrail_cases_fixture.py  test_hint_guardrail_policy.py  test_hint_policy.py  test_in_memory_attempt_repository.py  test_in_memory_generation_quota_repository.py  test_json_formatter.py  test_logging_middleware.py  test_openai_client_config.py  test_publish_next_daily_case_use_case.py  test_publish_policy.py  test_rate_limiting.py  test_request_hint_use_case.py  test_scheduler_oidc.py  test_scoring_policy.py  test_solution_policy.py  test_stream_generation_events.py  test_submit_solution_use_case.py  test_value_objects.py
tools/ai-content/: .env.example  README.md  evaluate_cases.py  generate_cases.py  pyproject.toml
tools/ai-content/ai_content/: difficulty_evaluator.py  draft_store.py  evaluators.py  fidelity_checker.py  generator.py  logic_builder.py  models.py  openai_client.py  openai_evaluators.py  pipeline.py  prompts.py  rule_validator.py  scenario_templates.py  schema_parser.py
tools/ai-content/evals/: eval_baseline.json  golden_cases.json  invalid_cases.json
tools/ai-content/prompts/: evaluate_case_logic_v1.md  evaluate_case_logic_v2.md  evaluate_case_logic_v3.md  evaluate_case_safety_v1.md  evaluate_case_safety_v2.md  generate_case_v1.md  generate_case_v2.md  generate_case_v3.md
tools/ai-content/tests/: conftest.py  fakes.py  test_case_prose_rendering.py  test_difficulty_evaluator.py  test_fidelity_checker.py  test_logic_builder.py  test_openai_client_config.py  test_pipeline.py  test_rule_validator.py  test_schema_parser.py
(+135 files in other folders)
