[project]
name = "tiny-detective-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.1",
    "google-cloud-firestore>=2.28.0",
    "openai>=2.46.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
