[project]
name = "tiny-detective-api"
version = "0.1.0"
description = "FastAPI backend for Tiny Detective AI: case retrieval, solution scoring, guarded AI hints, and the live AI case-generation pipeline."
requires-python = ">=3.12"
authors = [{ name = "Bogbra", email = "thombog.inv@gmail.com" }]
license = "MIT"
dependencies = [
    "fastapi>=0.139.1",
    "google-cloud-firestore>=2.28.0",
    "openai>=2.46.0",
    "python-dotenv>=1.2.2",
    "slowapi>=0.1.10",
    "tiny-detective-ai-content",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv.sources]
tiny-detective-ai-content = { path = "../../tools/ai-content", editable = true }

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    # FastAPI's dependency-injection pattern requires Depends(...) as a
    # parameter default -- that's how the framework is designed to be
    # used, not an accidental function-call-in-default bug.
    "B008",
    # Difficulty/PublishStatus inherit (str, Enum), not enum.StrEnum --
    # deliberately unchanged here: a lint-hardening pass is the wrong
    # place to touch core domain value objects with real Firestore/JSON
    # serialization dependents, even for a low-risk-seeming rename.
    "UP042",
]
