[project]
name = "tiny-detective-ai-content"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.45.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# evals/ and prompts/ are runtime data directories, not Python packages —
# without this, setuptools' flat-layout auto-discovery treats every
# top-level directory as a package candidate and refuses to build at all.
# Needed now that services/api imports this as an editable path dependency
# (see ADR-0007) rather than only ever running this project standalone.
include = ["ai_content*"]
